// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab Item (unit tests) when initialized with disabled attribute should match the snapshot 1`] = `
<kv-tab-item custom-class="" disabled="" label="Dashboard" tab-key="dashboard">
  <template shadowrootmode="open">
    <div class="disabled primary tab-item-container">
      <div class="label">
        Dashboard
      </div>
      <slot name="right-slot"></slot>
    </div>
  </template>
</kv-tab-item>
`;

exports[`Tab Item (unit tests) when initialized with notification-color attribute should match the snapshot 1`] = `
<kv-tab-item custom-class="" label="Dashboard" tab-key="dashboard">
  <template shadowrootmode="open">
    <div class="primary tab-item-container">
      <div class="label">
        Dashboard
      </div>
      <slot name="right-slot"></slot>
    </div>
  </template>
</kv-tab-item>
`;

exports[`Tab Item (unit tests) when initialized with required props should match the snapshot 1`] = `
<kv-tab-item custom-class="" label="Dashboard" tab-key="dashboard">
  <template shadowrootmode="open">
    <div class="primary tab-item-container">
      <div class="label">
        Dashboard
      </div>
      <slot name="right-slot"></slot>
    </div>
  </template>
</kv-tab-item>
`;

exports[`Tab Item (unit tests) when initialized with selected attribute should match the snapshot 1`] = `
<kv-tab-item custom-class="" label="Dashboard" selected="" tab-key="dashboard">
  <template shadowrootmode="open">
    <div class="primary selected tab-item-container">
      <div class="label">
        Dashboard
      </div>
      <slot name="right-slot"></slot>
    </div>
  </template>
</kv-tab-item>
`;
